--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,75 +1,126 @@
-name: Deploy Telegram Bots
+name: 🚀 Deploy Telegram Bots
 
 on:
   push:
     branches: [ master ]
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy'
+        required: true
+        default: 'production'
+        type: choice
+        options:
+          - production
+          - staging
+
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  REGION: europe-west3
+  VM_HOST: ${{ secrets.VM_HOST }}
+  DEPLOY_PATH: /opt/apps/telegram-bots
 
 jobs:
-  deploy:
+  build-and-deploy:
+    name: 🏗️ Build & Deploy Telegram Bots
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
-    - name: Run tests (if any)
-      run: |
-        # Add test commands here when tests are available
-        echo "No tests configured yet"
-        
-    - name: Build and push Docker images
-      env:
-        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      run: |
-        echo "Building Docker images..."
-        docker build -t payment-bot ./payment-bot/
-        docker build -t order-bot ./order-bot/
-        
-        # Push to registry if credentials are configured
-        if [ ! -z "$DOCKER_REGISTRY" ] && [ ! -z "$DOCKER_USERNAME" ] && [ ! -z "$DOCKER_PASSWORD" ]; then
-          echo "$DOCKER_PASSWORD" | docker login $DOCKER_REGISTRY -u $DOCKER_USERNAME --password-stdin
-          docker tag payment-bot $DOCKER_REGISTRY/payment-bot:latest
-          docker tag order-bot $DOCKER_REGISTRY/order-bot:latest
-          docker push $DOCKER_REGISTRY/payment-bot:latest
-          docker push $DOCKER_REGISTRY/order-bot:latest
-        else
-          echo "Docker registry credentials not configured, skipping push"
-        fi
-        
-    - name: Deploy to GCP (if configured)
-      env:
-        GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-        GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-        GCP_ZONE: ${{ secrets.GCP_ZONE }}
-        GCP_INSTANCE: ${{ secrets.GCP_INSTANCE }}
-      run: |
-        if [ ! -z "$GCP_PROJECT_ID" ] && [ ! -z "$GCP_SA_KEY" ]; then
-          echo "GCP deployment would run here"
-          echo "Configure GCP_PROJECT_ID, GCP_SA_KEY, GCP_ZONE, GCP_INSTANCE secrets"
-          # Uncomment and configure when ready for GCP deployment:
-          # echo "$GCP_SA_KEY" | base64 -d > gcp-key.json
-          # gcloud auth activate-service-account --key-file gcp-key.json
-          # gcloud config set project $GCP_PROJECT_ID
-          # gcloud compute scp --zone=$GCP_ZONE . $GCP_INSTANCE:~/app --recurse
-          # gcloud compute ssh --zone=$GCP_ZONE $GCP_INSTANCE --command="cd ~/app && docker-compose up -d"
-        else
-          echo "GCP deployment not configured"
-        fi
-        
-    - name: Notify deployment status
-      run: |
-        echo "Deployment workflow completed"
-        echo "Configure secrets in GitHub repository settings for full deployment"
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
+
+      - name: 🔐 Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: ☁️ Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: 🐳 Configure Docker
+        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+
+      - name: 🏗️ Build & Push Bot Images
+        env:
+          IMAGE: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/apps/telegram-bots
+        run: |
+          # Build unified bot image
+          docker build \
+            --tag "${IMAGE}:${{ github.sha }}" \
+            --tag "${IMAGE}:latest" .
+          
+          docker push "${IMAGE}:${{ github.sha }}"
+          docker push "${IMAGE}:latest"
+
+      - name: 📤 Upload Deployment Files
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ env.VM_HOST }}
+          username: ${{ secrets.VM_SSH_USER }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          source: "docker-compose.yml,Caddyfile,.dockerignore"
+          target: ${{ env.DEPLOY_PATH }}
+          overwrite: true
+
+      - name: 🚀 Deploy Telegram Bots
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ env.VM_HOST }}
+          username: ${{ secrets.VM_SSH_USER }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          script: |
+            echo "🚀 Deploying Telegram Bots..."
+            
+            # Setup deployment directory
+            sudo mkdir -p ${{ env.DEPLOY_PATH }}
+            sudo chown -R $USER:$USER ${{ env.DEPLOY_PATH }}
+            cd ${{ env.DEPLOY_PATH }}
+            
+            # Fetch runtime secrets from Secret Manager
+            gcloud secrets versions access latest \
+              --secret="telegram-bots-env" \
+              --project=${{ env.PROJECT_ID }} > .env
+            
+            # Update docker-compose to use registry image
+            sed -i 's|build: .|image: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/apps/telegram-bots:latest|g' docker-compose.yml
+            
+            # Pull latest images
+            gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+            docker compose pull
+            
+            # Deploy the stack
+            docker compose down --remove-orphans
+            docker compose up -d --wait
+            
+            echo "✅ Telegram bots deployment completed"
+
+      - name: 🔍 Health Check
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ env.VM_HOST }}
+          username: ${{ secrets.VM_SSH_USER }}
+          key: ${{ secrets.VM_SSH_KEY }}
+          script: |
+            echo "🔍 Testing telegram bot deployment..."
+            
+            # Wait for services to be ready
+            sleep 30
+            
+            # Test health endpoint
+            if curl -f --connect-timeout 10 http://localhost/health >/dev/null 2>&1; then
+              echo "✅ Health check passed"
+            else
+              echo "❌ Health check failed"
+              curl -v http://localhost/health
+              exit 1
+            fi
+            
+            # Test bot status endpoints
+            curl -f http://localhost/bots/payment/status && echo "✅ Payment bot OK" || echo "⚠️ Payment bot status unavailable"
+            curl -f http://localhost/bots/order/status && echo "✅ Order bot OK" || echo "⚠️ Order bot status unavailable"
+            
+            echo "🐳 Container status:"
+            docker ps --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
+            
+            echo "📋 Recent logs:"
+            docker compose logs --tail=10
