--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,163 +1,307 @@
-#!/usr/bin/env bash
-set -Eeuo pipefail
-LOG="/var/log/telegram-bots-deploy.log"
-exec > >(tee -a "$LOG") 2>&1
-echo "[$(date -Is)] 🚀 Starting Telegram Bots deployment..."
+name: 🚀 Deploy Telegram Bots
 
-trap 'ec=$?; echo "[$(date -Is)] ❌ Failed at line $LINENO (exit $ec)"; exit $ec' ERR
+on:
+  push:
+    branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy'
+        required: true
+        default: 'production'
+        type: choice
+        options:
+          - production
+          - staging
 
-PROJECT_ID="${PROJECT_ID}"
-REGION="${REGION}"
-DEPLOY_PATH="${DEPLOY_PATH}"
-IMAGE_REPO="${IMAGE_REPO}"
-IMAGE_TAG="${IMAGE_TAG}"
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  REGION: europe-west3
+  VM_HOST: ${{ secrets.VM_HOST }}
+  DEPLOY_PATH: /opt/apps/telegram-bots
+  VM_NAME: vm-runtime
+  ZONE: europe-west3-b
 
-echo "[$(date -Is)] Context:"
-echo " - PROJECT_ID=$PROJECT_ID"
-echo " - REGION=$REGION"
-echo " - DEPLOY_PATH=$DEPLOY_PATH"
-echo " - IMAGE=${IMAGE_REPO}:${IMAGE_TAG}"
+jobs:
+  build-and-deploy:
+    name: 🏗️ Build & Deploy Telegram Bots
+    runs-on: ubuntu-latest
 
-echo "[$(date -Is)] Preparing deploy dir..."
-mkdir -p "$DEPLOY_PATH"/{logs,config}
-cd "$DEPLOY_PATH"
+    steps:
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v4
 
-echo "[$(date -Is)] Writing docker-compose.yml..."
-cat > docker-compose.yml <<COMPOSE
-version: "3.9"
-services:
-  payment-bot:
-    image: ${IMAGE_REPO}:${IMAGE_TAG}
-    container_name: payment-bot
-    restart: unless-stopped
-    command: ["python", "bot.py"]
-    env_file: [.env]
-    expose: ["8000"]
-    networks: [web]
-    mem_limit: 512m
-    cpus: "0.30"
-    volumes:
-      - ./logs:/app/logs
-    healthcheck:
-      test: ["CMD-SHELL","curl -fsS http://localhost:8000/health || exit 1"]
-      interval: 20s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+      - name: ✅ Validate Required Secrets
+        run: |
+          set -e
+          [ -n "${{ secrets.GCP_PROJECT_ID }}" ] || { echo "❌ GCP_PROJECT_ID missing"; exit 1; }
+          [ -n "${{ secrets.GCP_SA_KEY }}" ] || { echo "❌ GCP_SA_KEY missing"; exit 1; }
+          [ -n "${{ secrets.VM_HOST }}" ] || { echo "❌ VM_HOST missing"; exit 1; }
+          echo "✅ Secrets OK"
+          echo "PROJECT_ID=${{ env.PROJECT_ID }}"
+          echo "REGION=${{ env.REGION }}"
+          echo "VM_HOST=${{ env.VM_HOST }}"
 
-  order-bot:
-    image: ${IMAGE_REPO}:${IMAGE_TAG}
-    container_name: order-bot
-    restart: unless-stopped
-    command: ["python", "order_bot.py"]
-    env_file: [.env]
-    expose: ["8001"]
-    networks: [web]
-    mem_limit: 512m
-    cpus: "0.30"
-    volumes:
-      - ./logs:/app/logs
-    healthcheck:
-      test: ["CMD-SHELL","curl -fsS http://localhost:8001/health || exit 1"]
-      interval: 20s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+      - name: 🔐 Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-  caddy:
-    image: caddy:2-alpine
-    container_name: caddy
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      # add "443:443" only if you configure TLS
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile:ro
-      - caddy_data:/data
-      - caddy_config:/config
-      - caddy_logs:/var/log/caddy
-    networks: [web]
-    mem_limit: 128m
-    cpus: "0.25"
-    healthcheck:
-      test: ["CMD","caddy","version"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    depends_on:
-      payment-bot:
-        condition: service_healthy
-      order-bot:
-        condition: service_healthy
+      - name: ☁️ Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
 
-volumes:
-  caddy_data:
-    external: true
-  caddy_config:
-  caddy_logs:
+      - name: 🕵️ Who am I? / Config
+        run: |
+          gcloud --version
+          gcloud auth list
+          gcloud config list
 
-networks:
-  web:
-    external: true
-COMPOSE
+      - name: 🧩 Set active project (defensive)
+        run: |
+          gcloud config set project "${PROJECT_ID}"
+          echo "Active project: $(gcloud config get-value project)"
 
-echo "[$(date -Is)] Writing Caddyfile..."
-cat > Caddyfile <<'CADDY'
-:80 {
-  log {
-    output stdout
-    format console
-  }
+      - name: 🐳 Configure Docker for Artifact Registry
+        run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
-  @health { path /health }
-  respond @health "OK" 200
+      - name: 🏗️ Build & Push Bot Images
+        env:
+          IMAGE: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/apps/telegram-bots
+        run: |
+          docker build \
+            --tag "${IMAGE}:${{ github.sha }}" \
+            --tag "${IMAGE}:latest" .
+          docker push "${IMAGE}:${{ github.sha }}"
+          docker push "${IMAGE}:latest"
 
-  handle /bots/payment/status {
-    reverse_proxy payment-bot:8000
-  }
+      - name: 📤 Create Deployment Script
+        run: |
+          echo "📝 Creating deployment script..."
+          cat > deploy-script.sh << 'EOF'
+          #!/bin/bash
+          set -e
+          echo "🚀 Starting Telegram Bots deployment..."
 
-  handle /bots/order/status {
-    reverse_proxy order-bot:8001
-  }
+          # Setup deployment directory
+          sudo mkdir -p ${{ env.DEPLOY_PATH }}
+          sudo chown -R $(whoami):$(whoami) ${{ env.DEPLOY_PATH }}
+          cd ${{ env.DEPLOY_PATH }}
 
-  handle /* {
-    respond "9-Tones Telegram Bots - Status: Running" 200
-  }
+          # Create docker-compose.yml
+          cat > docker-compose.yml << 'COMPOSE_EOF'
+          version: "3.9"
 
-  encode gzip zstd
+          services:
+            # Payment Bot
+            payment-bot:
+              image: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/apps/telegram-bots:latest
+              container_name: payment-bot
+              restart: unless-stopped
+              command: ["python", "bot.py"]
+              env_file: [.env]
+              expose: ["8000"]
+              networks: [web]
+              mem_limit: 512m
+              cpus: "0.3"
+              volumes:
+                - ./logs:/app/logs
+              healthcheck:
+                test: ["CMD", "python", "-c", "import sys; sys.exit(0)"]
+                interval: 30s
+                timeout: 10s
+                retries: 3
+                start_period: 30s
+              depends_on:
+                - caddy
 
-  header {
-    -Server
-    X-Content-Type-Options nosniff
-    X-Frame-Options DENY
-    X-XSS-Protection "1; mode=block"
-    Referrer-Policy strict-origin-when-cross-origin
-  }
-}
-CADDY
+            # Order Bot
+            order-bot:
+              image: ${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/apps/telegram-bots:latest
+              container_name: order-bot
+              restart: unless-stopped
+              command: ["python", "order_bot.py"]
+              env_file: [.env]
+              expose: ["8001"]
+              networks: [web]
+              mem_limit: 512m
+              cpus: "0.3"
+              volumes:
+                - ./logs:/app/logs
+              healthcheck:
+                test: ["CMD", "python", "-c", "import sys; sys.exit(0)"]
+                interval: 30s
+                timeout: 10s
+                retries: 3
+                start_period: 30s
+              depends_on:
+                - caddy
 
-echo "[$(date -Is)] Ensuring external network/volume exist..."
-docker network create web || true
-docker volume create caddy_data || true
+            # Caddy Reverse Proxy
+            caddy:
+              image: caddy:2-alpine
+              container_name: caddy
+              restart: unless-stopped
+              ports:
+                - "80:80"
+                - "443:443"
+              volumes:
+                - ./Caddyfile:/etc/caddy/Caddyfile:ro
+                - caddy_data:/data
+                - caddy_config:/config
+                - caddy_logs:/var/log/caddy
+              networks: [web]
+              mem_limit: 128m
+              cpus: "0.25"
+              healthcheck:
+                test: ["CMD", "caddy", "version"]
+                interval: 30s
+                timeout: 10s
+                retries: 3
 
-echo "[$(date -Is)] Fetching .env from Secret Manager..."
-gcloud auth configure-docker ${REGION}-docker.pkg.dev --quiet
-gcloud secrets versions access latest \
-  --secret="telegram-bots-env" \
-  --project="${PROJECT_ID}" > .env
+          volumes:
+            caddy_data:
+              external: true
+            caddy_config:
+            caddy_logs:
 
-echo "[$(date -Is)] Pulling images..."
-docker compose pull --quiet || true
+          networks:
+            web:
+              external: true
+          COMPOSE_EOF
 
-echo "[$(date -Is)] Deploying stack..."
-docker compose down --remove-orphans || true
-docker compose up -d --wait --timeout 120
+          # Create Caddyfile
+          cat > Caddyfile << 'CADDY_EOF'
+          :80 {
+            log {
+              output stdout
+              format console
+            }
 
-echo "[$(date -Is)] Post-deploy: ps + health..."
-docker ps
-docker compose ps
+            # Health check endpoint
+            @health { path /health }
+            respond @health "OK" 200
 
-echo "[$(date -Is)] ✅ Deployment completed"
+            # Bot status endpoints
+            handle /bots/payment/status {
+              reverse_proxy payment-bot:8000
+            }
+
+            handle /bots/order/status {
+              reverse_proxy order-bot:8001
+            }
+
+            # Default response for root
+            handle /* {
+              respond "9-Tones Telegram Bots - Status: Running" 200
+            }
+
+            # Enable compression
+            encode gzip zstd
+
+            # Basic security headers
+            header {
+              # Remove server info
+              -Server
+              # Security headers
+              X-Content-Type-Options nosniff
+              X-Frame-Options DENY
+              X-XSS-Protection "1; mode=block"
+              Referrer-Policy strict-origin-when-cross-origin
+            }
+
+            # Rate limiting
+            @ratelimit {
+              not remote_ip 127.0.0.1 ::1
+            }
+            rate_limit @ratelimit {
+              zone bot_requests {
+                key {remote_ip}
+                events 60
+                window 1m
+              }
+            }
+          }
+          CADDY_EOF
+
+          # Fetch runtime secrets from Secret Manager
+          echo "🔐 Fetching secrets..."
+          gcloud secrets versions access latest \
+            --secret="telegram-bots-env" \
+            --project=${{ env.PROJECT_ID }} > .env
+
+          # Create logs directory
+          mkdir -p logs
+
+          # Pull latest images
+          echo "📥 Pulling Docker images..."
+          gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
+          docker compose pull
+
+          # Deploy the stack
+          echo "🚀 Deploying containers..."
+          docker compose down --remove-orphans || true
+          docker compose up -d --wait
+
+          echo "✅ Telegram bots deployment completed!"
+          EOF
+
+          chmod +x deploy-script.sh
+
+      - name: 🧪 Preflight: verify VM exists & we have rights
+        run: |
+          echo "🔎 Checking VM '${VM_NAME}' in zone '${ZONE}' and project '${PROJECT_ID}'..."
+          if ! gcloud compute instances describe "${VM_NAME}" --zone="${ZONE}" --project="${PROJECT_ID}" >/dev/null 2>&1; then
+            echo "❌ Unable to describe VM."
+            echo "   Check PROJECT_ID/ZONE/VM_NAME and IAM (roles/compute.instanceAdmin.v1 on CI identity)."
+            exit 1
+          fi
+          echo "✅ VM describe OK"
+
+      - name: 🚀 Deploy via VM Startup Script
+        run: |
+          echo "🚀 Setting startup script via metadata..."
+          gcloud compute instances add-metadata "${VM_NAME}" \
+            --zone="${ZONE}" \
+            --project="${PROJECT_ID}" \
+            --metadata-from-file startup-script=deploy-script.sh
+
+          echo "🔄 Restarting VM to trigger deployment..."
+          gcloud compute instances stop "${VM_NAME}" --zone="${ZONE}" --project="${PROJECT_ID}" --quiet
+          gcloud compute instances start "${VM_NAME}" --zone="${ZONE}" --project="${PROJECT_ID}" --quiet
+
+          echo "⏳ Waiting 120s for startup script to finish..."
+          sleep 120
+
+      - name: 🔍 Health Check
+        run: |
+          echo "🔍 Running health checks..."
+          VM_IP=$(gcloud compute instances describe "${VM_NAME}" \
+            --zone="${ZONE}" --project="${PROJECT_ID}" \
+            --format='get(networkInterfaces[0].accessConfigs[0].natIP)')
+          echo "VM IP: $VM_IP"
+
+          echo "⏳ Waiting for services..."
+          sleep 60
+
+          echo "🔍 Testing /health..."
+          for i in {1..10}; do
+            if curl -f --connect-timeout 10 "http://$VM_IP/health" >/dev/null 2>&1; then
+              echo "✅ Health OK (attempt $i)"; break
+            fi
+            echo "❌ Not ready (attempt $i)"; sleep 30
+            [ $i -eq 10 ] && { echo "❌ Health check failed"; curl -v "http://$VM_IP/health" || true; exit 1; }
+          done
+
+          echo "🤖 Testing bot endpoints (best-effort)"
+          curl -f "http://$VM_IP/" && echo "✅ / OK" || echo "⚠️ / failed"
+          curl -f "http://$VM_IP/bots/payment/status" && echo "✅ payment ok" || echo "⚠️ payment failed"
+          curl -f "http://$VM_IP/bots/order/status" && echo "✅ order ok" || echo "⚠️ order failed"
+
+          echo "✅ Deployment health check completed"
+
+
+
+
 
 
 
