--- a/.github/workflows/deploy-to-existing-gcp.yml
+++ b/.github/workflows/deploy-to-existing-gcp.yml
@@ -391,7 +391,7 @@ jobs:
           key: ${{ secrets.VM_SSH_KEY }}
           overwrite: true
           strip_components: 0
-          source: "infra/,secure-docker-setup/,.env"
+          source: "secure-docker-setup/,.env"
           target: "/opt/${{ env.APP_NAME }}/"
           debug: true
 
@@ -607,24 +607,7 @@ jobs:
             echo "🔐 Set perms"
             chmod 600 .env 2>/dev/null || true
 
-            echo "🌐 Start/Reload Caddy (if present and configured)"
-            if [ -d "infra/caddy" ]; then
-              cd infra/caddy
-              
-              # Check if compose file has any uncommented services
-              if grep -q "^[[:space:]]*[^#].*:" compose.yml 2>/dev/null; then
-                echo "✅ Caddy compose file has active services"
-                dco up -d
-                sleep 4
-                dco ps || true
-              else
-                echo "⚠️  Caddy compose file is empty or fully commented out - skipping Caddy"
-              fi
-              
-              cd "$APP_DIR"
-            else
-              echo "ℹ️  No infra/caddy directory found - skipping Caddy"
-            fi
+            echo "ℹ️  Using existing Caddy on VM - no separate Caddy deployment"
 
             echo "🤖 Deploy app"
             dco -f secure-docker-setup/docker-compose.secure.yml pull
